--- a/bundles/org.openhab.binding.matter/code-gen/package.json
+++ b/bundles/org.openhab.binding.matter/code-gen/package.json
@@ -18,7 +18,7 @@
         "prettier-plugin-organize-imports": "^4.1.0"
     },
     "dependencies": {
-        "@matter/main": "v0.14.0",
+        "@matter/main": "v0.15.0-alpha.0-20250626-fc3a84ce9",
         "handlebars": "^4.7.8"
     },
     "files": [
