--- a/bundles/org.openhab.binding.matter/matter-server/package.json
+++ b/bundles/org.openhab.binding.matter/matter-server/package.json
@@ -38,9 +38,9 @@
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
-        "@matter/main": "v0.14.0",
-        "@matter/node": "v0.14.0",
-        "@project-chip/matter.js": "v0.14.0",
+        "@matter/main": "v0.15.0-alpha.0-20250626-fc3a84ce9",
+        "@matter/node": "v0.15.0-alpha.0-20250626-fc3a84ce9",
+        "@project-chip/matter.js": "v0.15.0-alpha.0-20250626-fc3a84ce9",
         "uuid": "^9.0.1",
         "ws": "^8.18.0",
         "yargs": "^17.7.2"
