--- a/bundles/org.openhab.binding.matter/code-gen/package.json
+++ b/bundles/org.openhab.binding.matter/code-gen/package.json
@@ -18,7 +18,7 @@
         "prettier-plugin-organize-imports": "^4.1.0"
     },
     "dependencies": {
-        "@matter/main": "v0.16.0-alpha.0-20260109-92d11a87b",
+        "@matter/main": "v0.16.2",
         "handlebars": "^4.7.8"
     },
     "files": [
