Rename claude-config to main-working, add upstream sync
- Rename branch from claude-config to main-working
- Add nightly workflow to sync fork's main from upstream
- Update existing sync workflow for new branch name
- Update CLAUDE.md references throughout

Signed-off-by: Daniel Cunningham <dan@digitaldan.com>
Signed-off-by: Dan Cunningham <dan@digitaldan.com>

--- a/.github/workflows/sync-main-working.yml
+++ b/.github/workflows/sync-main-working.yml
@@ -1,4 +1,4 @@
-name: Sync claude-config with main
+name: Sync main-working with main
 on:
   push:
     branches: [main]
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: claude-config
+          ref: main-working
           fetch-depth: 0
       - run: |
           git config user.name "github-actions"
